fix about me hero on mobile

--- a/styles/about.css
+++ b/styles/about.css
@@ -1,8 +1,18 @@
 @import url("/styles/styles.css");
 
+
+@media only screen and (max-width: 767px) {
+  .anout-hero {
+    font-size: 90px;
+  }
+}
+
 /* hero styles */
 .about-hero {
   text-align: center;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
   color: var(--tile-color);
   font-size: 210px;
   font-weight: 500;
